--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for TagTrait
 
+1.5.0 - Mod updated for 1.5 and passed autotests
+
+
 1.4.1 - Mod updated for 1.4 and passed autotests
 
 
