Updated reference to the continued version of [SYR] Trait Value

--- a/Languages/English/DefInjected/TraitDef/TAG Traits_Spectrum.xml
+++ b/Languages/English/DefInjected/TraitDef/TAG Traits_Spectrum.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <TAG.degreeDatas.0.label>Alpha TAG</TAG.degreeDatas.0.label>
   <TAG.degreeDatas.0.description>{PAWN_nameDef} had an outstanding reaction to being born on Luciferium. {PAWN_pronoun} has phenomenal abilities compared to normal humans. Like all TAGS, {PAWN_nameDef} is more prone to mental breaks.</TAG.degreeDatas.0.description>
